feat: Added quota info to status bar + local API
